# Easy-Face-Recognition

./: README.md  encodings.pickle  facial_rec_simple.py  headshots.py  requirements.txt  setup.cfg  train_model.py
