# NOTE: update the `[project]` section with your app details
[metadata]
name = Simple_Facial_Recognition
author = Nicholas Amely
author_email = namely@mail.fresnostate.edu
url = https://github.com/Namlick/Simple-Facial-Recognition
download_url = https://github.com/Namlick/Simple-Facial-Recognition
keywords = computer vision, open-source
description = Repository to get started with facial recognition
classifiers =
    Programming Language :: Python :: 3
    Topic :: Software Development

# NOTE: update the the requirements for your app
[options]
python_requires = >=3.6
setup_requires =
    wheel
install_requires =
    imutils
    opencv-python
    cmake
    face-recognition
    #picamera
