# NOTE: update the `[project]` section with your app details
[metadata]
name = Easy_Facial_Recognition
author = Tristen Moran
author_email = tristen.j.moran@gmail.com
url = https://github.com/Tristen-M-SDR/Easy-Face-Recognition
download_url = https://github.com/Tristen-M-SDR/Easy-Face-Recognition
keywords = computer vision, open-source
description = Repository to get started with facial recognition
classifiers =
    Programming Language :: Python :: 3
    Topic :: Software Development

# NOTE: update the the requirements for your app
[options]
python_requires = >=3.6
setup_requires =
    wheel
install_requires =
    imutils
    opencv-python
    cmake
    face-recognition
    #picamera2
